# ChapterForge

./: CMakeLists.txt  LICENSE  README.md  aac_extractor.cpp  aac_extractor.hpp  chapterforge.cpp  chapterforge.hpp  dinf_builder.cpp  dinf_builder.hpp  hdlr_builder.cpp  hdlr_builder.hpp  jpeg_entry_builder.cpp  jpeg_entry_builder.hpp  main.cpp  mdat_writer.cpp  mdat_writer.hpp  mdhd_builder.cpp  mdhd_builder.hpp  mdia_builder.cpp  mdia_builder.hpp  meta_builder.cpp  meta_builder.hpp  minf_builder.cpp  minf_builder.hpp  moov_builder.cpp  moov_builder.hpp  mp4_atoms.cpp  mp4_atoms.hpp  mp4_muxer.cpp  mp4_muxer.hpp  mp4a_builder.cpp  mp4a_builder.hpp  mvhd_builder.cpp  mvhd_builder.hpp  nmhd_builder.cpp  nmhd_builder.hpp  smhd_builder.cpp  smhd_builder.hpp  stbl_audio_builder.cpp  stbl_audio_builder.hpp  (+26 more)
.github/workflows/: ci.yml  docs.yml  notarize-debug.yml  update-packaging.yml
Formula/: chapterforge.rb
docs/: Doxyfile.in  doxygen_mainpage.md
docs/example/: advanced_api_use_in_objectivecpp.mm  output.m4a
docs/html/: _r_e_a_d_m_e_8md.html  aac__extractor_8cpp.html  aac__extractor_8cpp.js  aac__extractor_8hpp.html  aac__extractor_8hpp.js  aac__extractor_8hpp_source.html  aac__extractor_8hpp_struct_aac_extract_result.js  annotated.html  annotated_dup.js  chapter__image__sample_8hpp.html  chapter__image__sample_8hpp.js  chapter__image__sample_8hpp_source.html  chapter__image__sample_8hpp_struct_chapter_image_sample.js  chapter__text__sample_8hpp.html  chapter__text__sample_8hpp.js  chapter__text__sample_8hpp_source.html  chapter__text__sample_8hpp_struct_chapter_text_sample.js  chapter__timing_8hpp.html  chapter__timing_8hpp.js  chapter__timing_8hpp_source.html  chapter__tracks_8png.html  chapterforge_8cpp.html  chapterforge_8cpp.js  chapterforge_8hpp.html  chapterforge_8hpp.js  chapterforge_8hpp_source.html  class_atom-members.html  class_atom.html  class_atom.js  classes.html  dinf__builder_8cpp.html  dinf__builder_8cpp.js  dinf__builder_8hpp.html  dinf__builder_8hpp.js  dinf__builder_8hpp_source.html  dir_185e1be576cc3aab87068787be53911a.html  dir_185e1be576cc3aab87068787be53911a.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+213 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  (+63 more)
include/: aac_extractor.hpp  chapter_image_sample.hpp  chapter_text_sample.hpp  chapter_timing.hpp  chapterforge.hpp  dinf_builder.hpp  fourcc_utils.hpp  hdlr_builder.hpp  jpeg_entry_builder.hpp  jpeg_info.hpp  logging.hpp  mdat_writer.hpp  mdhd_builder.hpp  mdia_builder.hpp  meta_builder.hpp  metadata_set.hpp  minf_builder.hpp  moov_builder.hpp  mp4_atoms.hpp  mp4_muxer.hpp  mp4a_builder.hpp  mvhd_builder.hpp  nmhd_builder.hpp  parser.hpp  smhd_builder.hpp  stbl_audio_builder.hpp  stbl_builder.hpp  stbl_image_builder.hpp  stbl_metadata_builder.hpp  stbl_text_builder.hpp  stco_builder.hpp  stsc_builder.hpp  stsd_builder.hpp  stsz_builder.hpp  stts_builder.hpp  tkhd_builder.hpp  trak_builder.hpp  tx3g_stsd_builder.hpp  udta_builder.hpp  vmhd_builder.hpp
include/nlohmann/: json.hpp
ports/chapterforge/: portfile.cmake  vcpkg.json
scripts/: dump_chapters.swift  generate_diagrams.py  generate_test_audio.sh  generate_test_images.sh  generate_test_json.sh  generate_variations.sh  quicktime_play_test.sh  update_readme_toc.py
src/: aac_extractor.cpp  chapterforge.cpp  dinf_builder.cpp  hdlr_builder.cpp  jpeg_entry_builder.cpp  jpeg_info.cpp  logging.cpp  main.cpp  mdat_writer.cpp  mdhd_builder.cpp  mdia_builder.cpp  meta_builder.cpp  minf_builder.cpp  moov_builder.cpp  mp4_atoms.cpp  mp4_muxer.cpp  mp4a_builder.cpp  mvhd_builder.cpp  nmhd_builder.cpp  parser.cpp  smhd_builder.cpp  stbl_audio_builder.cpp  stbl_builder.cpp  stbl_image_builder.cpp  stbl_metadata_builder.cpp  stbl_text_builder.cpp  stco_builder.cpp  stsc_builder.cpp  stsd_builder.cpp  stsz_builder.cpp  stts_builder.cpp  tkhd_builder.cpp  trak_builder.cpp  tx3g_stsd_builder.cpp  udta_builder.cpp  vmhd_builder.cpp
testdata/: chapters.json  chapters_10s_2ch_normalimg_meta.json  chapters_10s_2ch_normalimg_nometa.json  chapters_10s_2ch_smallimg_urltext.json  chapters_10s_mixed_sizes.json  chapters_10s_mixedimg.json  chapters_10s_offset_first.json  chapters_10s_urltext.json  chapters_10s_urltext_nohref.json  chapters_250s_50ch_largeimg_meta.json  chapters_250s_50ch_normalimg_meta.json  chapters_big.json  chapters_big_nometa.json  chapters_golden2_like.json  chapters_large_50.json  chapters_nometa.json  chapters_normal_5.json  chapters_normal_nometa_5.json  chapters_small_50.json  input.aac  input.m4a  input_large.aac  input_large.m4a  output.m4a
tests/: audio_reuse_check.cpp  avfoundation_smoke.sh  avfoundation_urltext.sh  chapter_start_rules.cpp  check_image_mismatch_warn.cmake  check_jpeg_track.cmake  check_offset_with_bento.cmake  check_output_m4a.cmake  check_url_text.cmake  generate_assets.cmake  helper_unit.cpp  image_fixtures.cpp  overload_variants.cpp  parser_detail_unit.cpp  parser_fallback.cpp  parser_safety.cpp  parser_test_utils.hpp  parser_unit.cpp  read_api_unit.cpp  run_aac_with_mux.cmake  run_avfoundation_urltext.cmake  run_big_image_test.cmake  run_tools_with_mux.cmake  strict_validate.cmake  test_utils.hpp  video_debug_compare.cmake  writer_unit.cpp
